[metadata]

# the name of the package
name = lk_heuristic

# version of the package
version = 0.0.3

# author name
author = Frederico de Castro Neto

# author email
author_email = fred.cneto@hotmail.com

# short description
description = Lin-Kernighan Heuristic in Python

# long description (using the readme.md file)
long_description = file: README.md

# long description type
long_description_content_type = text/markdown

# package main url
url = https://github.com/kikocastroneto/lk_heuristic

# keyworkds for the package
keywords = tsp, lk, lkh

# license used for the package
license = MIT

# additional metada for pip
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]

# the directory that contains all source files
package_dir =
    = src
	
# additional packages required in project (using find to automatically collect packages)
packages = find:

# adding minimum python version
python_requires = >=3.7

# include additional data to package (not only python files), which are detailed in manifest.in file
include_package_data = True

# additional dependencies
install_requires =
    plotly==5.5.0

[options.packages.find]

# the path to look for dependencies used at packages options
where = src